# swissquote_challenge_25

./: README.md  analysis.ipynb  analysis.md  analysis_2025.04.07.ipynb  main.py  plots.html  plots.ipynb  pyproject.toml  random_graphs.ipynb  stock_data.csv  stocks.html
.ipynb_checkpoints/: analysis-checkpoint.ipynb  analysis_concise-checkpoint.ipynb  plots-checkpoint.ipynb
data/: ETHedge_analysis_submission.ipynb  data_close_2025.04.07_22.48.csv  data_close_2025.04.07_22.50.csv  data_close_2025.04.07_22.54.csv  data_close_2025.04.07_22.55.csv  data_close_2025.04.07_22.57.csv  data_close_2025.04.07_22.58.csv  data_close_2025.04.07_23.01.csv  data_close_2025.04.07_23.03.csv  data_close_2025.04.07_23.04.csv  data_close_2025.04.07_23.40.csv  data_close_FINAL_2025.03.29_11.43.csv  ticker_download_2025.04.07_22.48.csv  ticker_download_2025.04.07_22.49.csv  ticker_download_2025.04.07_22.53.csv  ticker_download_2025.04.07_22.55.csv  ticker_download_2025.04.07_22.57.csv  ticker_download_2025.04.07_23.01.csv  ticker_download_2025.04.07_23.03.csv  ticker_download_2025.04.07_23.04.csv  ticker_download_2025.04.07_23.48.csv  ticker_download_FINAL_2025.03.29_11.43.csv
